--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <title>Music Player</title>
 </head>
 
@@ -19,7 +19,7 @@
 
       <!-- Cover Image -->
       <div id="cover-box">
-        <img src="assets/images/cover1.jpg" alt="cover-image" id="cover" />
+        <img src="./assets/images/cover1.jpg" alt="cover-image" id="cover" />
       </div>
 
       <!-- Music Controls and Timer -->
@@ -62,6 +62,7 @@
               <path fill-rule="evenodd"
                 d="M8.6 5.2A1 1 0 0 0 7 6v12a1 1 0 0 0 1.6.8l8-6a1 1 0 0 0 0-1.6l-8-6Z"
                 clip-rule="evenodd" />
+                </svg>
             </span>
         </div>
         <div class="btn-x">
@@ -86,7 +87,7 @@
       </div>
     </div>
   </div>
-  <script src="js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
